# unmetered-code

./: .env.ghcr.example  .gitignore  LICENSE  README.md  bench-agents.sh  bench.py  claude-yolo.sh  claude.sh  compose.build.yaml  compose.yaml  config.env  connect.sh  destroy.sh  install.sh  open-vscode.sh  opencode.sh  provision.sh  pyproject.toml  start.sh  umcode
.github/: FUNDING.yml
.github/workflows/: ci.yml
anthropic-proxy/: Dockerfile  proxy.py
claude/: Dockerfile  claude-mcp-config.json  entrypoint.sh
config/: opencode.json
docs/: setup.md  troubleshooting.md
litellm/: config.yaml
opencode/: Dockerfile  entrypoint.sh
scripts/: lint-and-test.sh  select-offer.sh  select_offer.py
searxng/: settings.yml
ssh-tunnel/: Dockerfile  entrypoint.sh
