[project]
name = "unmetered-code"
version = "0.1.0"
description = "Private AI coding agents with MiniMax M2.5 on Vast.ai"
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
